Added Heroku connection and css stlying. lastly added a descriptive readme

--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,6 +1,6 @@
 <li>
     {{burger_name}}
     <button class="change-devoured" data-id="{{id}}" data-newdevoured="{{devoured}}">
-       {{#if devoured}} Devour!{{/if}}
+       {{#if devoured}} Devour! {{else}}Try again {{/if}}
     </button>
 </li>
