--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,40 +1,45 @@
+<div class="container-fluid" id="center-all-content">
+  <header>
+    <div class="">
+      <img src="/assets/img/burger.png" alt="burger">
+      <h1>Eat that Burger!</h1>
+    </div>
+  </header>
 
-<header>
-  <img src="/assets/img/burger.png" alt="burger">
-  <h2>Eat that Burger!</h2>
-</header>
+  <div class="row ">
+    <div class="col-lg-6">
+      <h4> Available Burgers</h4>
+      <ol>
+        {{#each burgers}}
+        {{#unless devoured}}
+        {{> burgers/burger-block devoured=true}}
+        {{/unless}}
+        {{/each}}
+      </ol>
+    </div>
 
+    <div class="col-lg-6">
+      <h4>Fininshed Burgers</h4>
+      <ol>
+        {{#each burgers}}
+        {{#if devoured}}
+        {{> burgers/burger-block devoured=false}}
+        {{/if}}
+        {{/each}}
+      </ol>
+    </div>
 
-<div>
-  <h4> Available Burgers</h4>
-  <ol>
-    {{#each burgers}}
-    {{#unless devoured}}
-    {{> burgers/burger-block devoured=true}}
-    {{/unless}}
-    {{/each}}
-  </ol>
-</div>
-
-<div>
-  <h4>Fininshed Burgers</h4>
-  <ol>
-    {{#each burgers}}
-    {{#if devoured}}
-    {{> burgers/burger-block devoured=false}}
-    {{/if}}
-    {{/each}}
-  </ol>
-</div>
-
-<div>
-<form class="create-form">
-
-  <div class="form-group">
-    <label for="bu">Burger Name:</label>
-    <input type="text" id="bu" name="name">
   </div>
-  <button type="submit">Submit</button>
 
-</form>
+  <div>
+    <form class="create-form">
+      <h4>Add a New Burger</h4>
+      <div class="form-group">
+        <input type="text" id="bu" name="name" placeholder="Type burger here">
+      </div>
+      <button type="submit">Submit</button>
+
+    </form>
+  </div>
+
 </div>
