--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -37,7 +37,7 @@
       <div class="form-group">
         <input type="text" id="bu" name="name" placeholder="Type burger here">
       </div>
-      <button type="submit">Submit</button>
+      <button type="submit" class="btn btn-secondary">Submit</button>
 
     </form>
   </div>
