--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,6 +1,6 @@
 <li>
     {{burger_name}}
-    <button class="change-devoured" data-id="{{id}}" data-newdevoured="{{devoured}}">
+    <button class="change-devoured btn btn-secondary" data-id="{{id}}" data-newdevoured="{{devoured}}">
        {{#if devoured}} Devour! {{else}}Try again {{/if}}
     </button>
 </li>
